--- a/public/index.html
+++ b/public/index.html
@@ -537,7 +537,7 @@ const analytics = getAnalytics(app);
 
           // Simulate API call to Gemini (replace with actual API call)
           try {
-              const apiKey = "AIzaSyBhUM4x7a-VtVtL4bG8SS0455UrPp1icOM"; // Replace with your actual API key
+              const apiKey = "<YOUR GEMINI API KEY>"; // Replace with your actual API key
               const response = await fetch(
                   "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=" + apiKey,
                   {
